@@ -1,1 +1,0 @@
-bin/m2r @PREFIX@/bin/m2r-@PYVERSSUFFIX@
