@@ -1,12 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2018/10/14 12:10:47 adam Exp $
-bin/m2r-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/m2r.py
-${PYSITELIB}/m2r.pyc
-${PYSITELIB}/m2r.pyo
